# prj-envoy-v1

./: .bazelrc  .bazelversion  .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
databases/: BUILD.bazel
envoys/: BUILD.bazel
infra/certs/: ca.crt  ca.srl  custom-ca-certificates.crt
infra/configs/: BUILD.bazel  api-envoy-config.yaml  front-envoy-config.yaml
infra/dockerfiles/: Dockerfile.front-envoy
infra/scripts/: BUILD.bazel  init_networks.sh
services/api-v1/: BUILD.bazel  README.md  main.go  main_test.go
services/api-v1/certs/: atai-envoy.com.crt  atai-envoy.com.key  dev.atai-envoy.com.crt
services/api-v1/dbhandlers/: BUILD.bazel  mongohandler.go  redishandler.go  sessionhandler.go
services/api-v1/grpchandlers/: BUILD.bazel  apiclienthandler.go
services/api-v1/routehandlers/: BUILD.bazel  defaulthandler.go  websockethandler.go
services/api-v1/types/: BUILD.bazel  types.go
services/api-v1/utilhandlers/: BUILD.bazel  appserverhandler.go  flaghandler.go
services/grpc-v1/: README.md
services/grpc-v1/client/: BUILD.bazel  client.go
services/grpc-v1/protos/: BUILD.bazel  service_ip_mapping.pb.go  service_ip_mapping.proto
services/grpc-v1/server/: BUILD.bazel  server.go  service_ip_mapping.json
services/nginx-v1/: BUILD.bazel
services/web-frontend-angular/: .gitignore  BUILD.bazel  README.md  angular.json  karma.conf.js  package-lock.json  package.json
services/web-frontend-angular/src/: index.html
services/web-frontend-angular/src/app/: app.component.spec.ts  app.component.ts
services/web-frontend-react/: BUILD.bazel  package.json
utils/: README.md
utils/certs/: BUILD.bazel  README.md  atai-envoy.com.csr  ca.key  ca.srl  grpc.atai-envoy.com.crt
utils/configs/: BUILD.bazel  api-envoy-config.yaml  custom-nginx.conf  front-envoy-config.yaml  grpc-client-envoy-config.yaml  mongo-envoy-config.yaml  redis-envoy-config.yaml
utils/scripts/: BUILD.bazel  bazel_stamp.sh  init_mongo.sh  init_networks.sh  run-api-proxy.sh  run-front-proxy.sh  run-grpc-client-proxy.sh  run-mongo-proxy.sh  run-nginx.sh  run-redis-proxy.sh
