load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

filegroup(
    name = "mongo-config-init",
    srcs = [
        "//utils/scripts:init_mongo.sh",
    ],
)

container_image(
    name = "mongo-standalone-v0.0.0",  # image tag
    base = "@alpine_3_9//image",
    entrypoint = [
        "/init_mongo.sh",
    ],
    files = [
        ":mongo-config-init",
    ],
    repository = "alantai/prj-envoy-v1",
    visibility = ["//visibility:public"],
)

container_image(
    name = "redis-standalone-v0.0.0",  # image tag
    base = "@alpine_redis_standalone//image",
    repository = "alantai/prj-envoy-v1",
    visibility = ["//visibility:public"],
)

# declare where and how the image will be published
container_push(
    name = "push-mongo-standalone",
    format = "Docker",
    image = ":mongo-standalone-v0.0.0",
    registry = "index.docker.io",
    repository = "alantai/prj-envoy-v1",
    tag = "mongo-standalone-v0.0.0",
)

container_push(
    name = "push-redis-standalone",
    format = "Docker",
    image = ":redis-standalone-v0.0.0",
    registry = "index.docker.io",
    repository = "alantai/prj-envoy-v1",
    tag = "redis-standalone-v0.0.0",
)
