load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

filegroup(
    name = "certs",
    srcs = [
        "//utils/certs:atai-envoy.com.crt",
        "//utils/certs:atai-envoy.com.key",
        "//utils/certs:custom-ca-certificates.crt",
    ],
)

filegroup(
    name = "api-config-execution",
    srcs = [
        "//utils/configs:api-envoy-config.yaml",
        "//utils/scripts:run-api-proxy.sh",
    ],
)

filegroup(
    name = "redis-config-execution",
    srcs = [
        "//utils/configs:redis-envoy-config.yaml",
        "//utils/scripts:run-redis-proxy.sh",
    ],
)

filegroup(
    name = "mongo-config-execution",
    srcs = [
        "//utils/configs:mongo-envoy-config.yaml",
        "//utils/scripts:run-mongo-proxy.sh",
    ],
)

container_image(
    name = "api-envoy-v0.0.0",  # image tag
    base = "@alpine_envoy//image",
    entrypoint = [
        "/run-api-proxy.sh",
    ],
    files = [
        ":api-config-execution",
        ":certs",
    ],
    repository = "alantai",
    visibility = ["//visibility:public"],
)

container_image(
    name = "redis-envoy-v0.0.0",  # image tag
    base = "@alpine_envoy//image",
    entrypoint = [
        "/run-redis-proxy.sh",
    ],
    files = [
        ":redis-config-execution",
    ],
    repository = "alantai",
    visibility = ["//visibility:public"],
)

container_image(
    name = "mongo-envoy-v0.0.0",  # image tag
    base = "@alpine_envoy//image",
    entrypoint = [
        "/run-mongo-proxy.sh",
    ],
    files = [
        ":mongo-config-execution",
    ],
    repository = "alantai",
    visibility = ["//visibility:public"],
)
