load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

filegroup(
    name = "certs",
    srcs = [
        "//utils/certs:atai-envoy.com.crt",
        "//utils/certs:atai-envoy.com.key",
        "//utils/certs:custom-ca-certificates.crt",
    ],
)

filegroup(
    name = "front-proxy-config-execution",
    srcs = [
        "//utils/configs:front-envoy-config.yaml",
        "//utils/scripts:run-front-proxy.sh",
    ],
)

filegroup(
    name = "redis-config-execution",
    srcs = [
        "//utils/configs:redis-envoy-config.yaml",
        "//utils/scripts:run-redis-proxy.sh",
    ],
)

filegroup(
    name = "mongo-config-execution",
    srcs = [
        "//utils/configs:mongo-envoy-config.yaml",
        "//utils/scripts:run-mongo-proxy.sh",
    ],
)

filegroup(
    name = "grpc-client-proxy-config-execution",
    srcs = [
        "//utils/configs:grpc-client-envoy-config.yaml",
        "//utils/scripts:run-grpc-client-proxy.sh",
    ],
)

container_image(
    name = "front-envoy-v0.0.0",  # image tag
    base = "@alpine_envoy//image",
    entrypoint = [
        "/run-front-proxy.sh",
    ],
    files = [
        ":certs",
        ":front-proxy-config-execution",
    ],
    repository = "alantai/prj-envoy-v1",
    visibility = ["//visibility:public"],
)

container_image(
    name = "redis-envoy-v0.0.0",  # image tag
    base = "@alpine_envoy//image",
    entrypoint = [
        "/run-redis-proxy.sh",
    ],
    files = [
        ":redis-config-execution",
    ],
    repository = "alantai/prj-envoy-v1",
    visibility = ["//visibility:public"],
)

container_image(
    name = "mongo-envoy-v0.0.0",  # image tag
    base = "@alpine_envoy//image",
    entrypoint = [
        "/run-mongo-proxy.sh",
    ],
    files = [
        ":mongo-config-execution",
    ],
    repository = "alantai/prj-envoy-v1",
    visibility = ["//visibility:public"],
)

container_image(
    name = "grpc-client-envoy-v0.0.0",  # image tag
    base = "@alpine_envoy//image",
    entrypoint = [
        "/run-grpc-client-proxy.sh",
    ],
    files = [
        ":certs",
        ":grpc-client-proxy-config-execution",
    ],
    repository = "alantai/prj-envoy-v1",
    visibility = ["//visibility:public"],
)

# declare where and how the image will be published
container_push(
    name = "push-front-envoy",
    format = "Docker",
    image = ":front-envoy-v0.0.0",
    tag = "front-envoy-v0.0.0",
    registry = "index.docker.io",
    repository = "alantai/prj-envoy-v1",
)

container_push(
    name = "push-redis-envoy",
    format = "Docker",
    image = ":redis-envoy-v0.0.0",
    tag = "redis-envoy-v0.0.0",
    registry = "index.docker.io",
    repository = "alantai/prj-envoy-v1",
)

container_push(
    name = "push-mongo-envoy",
    format = "Docker",
    image = ":mongo-envoy-v0.0.0",
    tag = "mongo-envoy-v0.0.0",
    registry = "index.docker.io",
    repository = "alantai/prj-envoy-v1",
)

container_push(
    name = "push-grpc-client-envoy",
    format = "Docker",
    image = ":grpc-client-envoy-v0.0.0",
    tag = "grpc-client-envoy-v0.0.0",
    registry = "index.docker.io",
    repository = "alantai/prj-envoy-v1",
)

