load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

filegroup(
    name = "certs",
    srcs = [
        "//infra/certs:atai-envoy.com.crt",
        "//infra/certs:atai-envoy.com.key",
    ],
)

go_library(
    name = "api-v1_lib",
    srcs = ["main.go"],
    importpath = "github.com/Gogistics/prj-envoy-v1/services/api-v1",
    visibility = ["//visibility:private"],
    deps = [
        "//services/api-v1/types:default",
        "@com_github_gorilla_mux//:mux",
        "@com_github_gorilla_websocket//:websocket",
    ],
)

go_binary(
    name = "api-v1",
    embed = [":api-v1_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "api-v1_test",
    srcs = ["main._test.go"],
    embed = [":api-v1_lib"],
    deps = [
        "@com_github_gogistics_go_web_app//api-app/types:go_default_library",
        "@com_github_google_go_cmp//cmp",
    ],
)

# docker build
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

container_image(
    name = "atai-envoy-api-v0.0.0",  # image tag
    base = "@alpine_linux_amd64//image",
    entrypoint = [
        "/api-v1",
    ],
    files = [
        ":api-v1",
        ":certs",
    ],
    repository = "alantai",
    visibility = ["//visibility:public"],
)
# ref: https://github.com/bazelbuild/rules_docker/blob/master/container/image.bzl

# declare where and how the image will be published
container_push(
    name = "push",
    format = "Docker",
    image = ":atai-envoy-api-v0.0.0",
    registry = "index.docker.io",
    repository = "alantai/envoy-service-api",
    tag = "v0.0.0",
)
# \docker build
