load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dbhandlers",
    srcs = [
        "mongohandler.go",
        "redishandler.go",
    ],
    importpath = "github.com/Gogistics/prj-envoy-v1/services/api-v1/dbhandlers",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_redis_redis_v8//:redis",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//bson/primitive",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)
