load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "routehandlers",
    srcs = [
        "defaulthandler.go",
        "websockethandler.go",
    ],
    importpath = "github.com/Gogistics/prj-envoy-v1/services/api-v1/routehandlers",
    visibility = ["//visibility:public"],
    deps = [
        "//services/api-v1/dbhandlers",
        "//services/api-v1/grpchandlers",
        "//services/api-v1/types:default",
        "@com_github_gorilla_websocket//:websocket",
    ],
)
