load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utilhandlers",
    srcs = ["appserverhandler.go"],
    importpath = "github.com/Gogistics/prj-envoy-v1/services/api-v1/utilhandlers",
    visibility = ["//visibility:public"],
    deps = [
        "//services/api-v1/routehandlers",
        "@com_github_gorilla_mux//:mux",
    ],
)
