load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

filegroup(
    name = "certs",
    srcs = [
        "//utils/certs:atai-envoy.com.key",
        "//utils/certs:grpc.atai-envoy.com.crt",
    ],
)

go_library(
    name = "server_lib",
    srcs = ["server.go"],
    importpath = "github.com/Gogistics/prj-envoy-v1/services/grpc-v1/server",
    visibility = ["//visibility:public"],
    deps = [
        "//services/grpc-v1/protos",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "service-query-server-v0.0.0",
    base = "@alpine_linux_amd64//image",
    entrypoint = [
        "/server",
    ],
    files = [
        ":certs",
        ":server",
    ],
    repository = "alantai",
)
